# modpub

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml
modpub/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  utils.py
modpub/core/: licenses.py  model.py  storage.py
modpub/plugins/: __init__.py  registry.py  repository.py
modpub/plugins/localdir/: plugin.py
modpub/plugins/thingiverse/: api.py  plugin.py
tests/: test_licenses.py  test_localdir.py  test_localdir_licenses.py  test_model.py  test_readme_localdir.py  test_thingiverse_licenses.py  test_thingiverse_stub.py
